--- a/static/styles.css
+++ b/static/styles.css
@@ -66,7 +66,12 @@ h2 {
 }
 
 .app__comments__comment {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
   background: rgb(192, 216, 224);
+  width: 90vw;
 }
 
 .app__comments__comment:nth-child(even) {
